// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login Snapshot testing renders Login with ErrorBanner 1`] = `
<Styled(form)
  onSubmit={[Function]}
>
  <Styled(h1)>
    Sign In
  </Styled(h1)>
  <Styled(div)>
    <ErrorBanner
      message="Impossible to connect"
    />
  </Styled(div)>
  <Styled(div)>
    <Input
      onChange={[Function]}
      placeholder="Email"
      textButton=""
      type="text"
      value=""
    />
  </Styled(div)>
  <Styled(div)>
    <Input
      onChange={[Function]}
      placeholder="Password"
      textButton="Show"
      type="password"
      value=""
    />
  </Styled(div)>
  <Styled(div)>
    <Button
      onClick={[Function]}
      type="form"
    >
      SignIn
    </Button>
    <Styled(input)
      type="submit"
    />
  </Styled(div)>
  <Styled(div)>
    <UnderlineLink
      href="es.com/forgot"
    >
      Forgot password
    </UnderlineLink>
    <Styled(div) />
    <UnderlineLink
      href="es.com/help"
    >
      Need Help?
    </UnderlineLink>
  </Styled(div)>
  <Styled(div) />
  <Styled(div)>
    <Styled(p)>
      New to eurosport player?
    </Styled(p)>
    <ArrowLink
      href="es.com/subscribe"
    >
      Subscribe
    </ArrowLink>
  </Styled(div)>
</Styled(form)>
`;

exports[`Login Snapshot testing renders Login without ErrorBanner 1`] = `
<Styled(form)
  onSubmit={[Function]}
>
  <Styled(h1)>
    Sign In
  </Styled(h1)>
  <Styled(div)>
    <Input
      onChange={[Function]}
      placeholder="Email"
      textButton=""
      type="text"
      value=""
    />
  </Styled(div)>
  <Styled(div)>
    <Input
      onChange={[Function]}
      placeholder="Password"
      textButton="Show"
      type="password"
      value=""
    />
  </Styled(div)>
  <Styled(div)>
    <Button
      onClick={[Function]}
      type="form"
    >
      SignIn
    </Button>
    <Styled(input)
      type="submit"
    />
  </Styled(div)>
  <Styled(div)>
    <UnderlineLink
      href="es.com/forgot"
    >
      Forgot password
    </UnderlineLink>
    <Styled(div) />
    <UnderlineLink
      href="es.com/help"
    >
      Need Help?
    </UnderlineLink>
  </Styled(div)>
  <Styled(div) />
  <Styled(div)>
    <Styled(p)>
      New to eurosport player?
    </Styled(p)>
    <ArrowLink
      href="es.com/subscribe"
    >
      Subscribe
    </ArrowLink>
  </Styled(div)>
</Styled(form)>
`;
